[package]
name = "parse-format"
version = "0.1.0"
edition = "2021"
description = "Format string parser used by rustc"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jf2048/parse-format.git"
repository = "https://github.com/jf2048/parse-format.git"
documentation = "https://docs.rs/parse-format"
readme = "README.md"

[dependencies]
unicode-ident = "1.0.5"
